// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBar should be like snapshot when AppState is DetailsPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InfoBar
    appState="details page"
    item={Object {}}
    items={
      Array [
        Object {},
      ]
    }
    setSortBy={null}
    total={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <InfoBar__InfoBarWrapper>
        <InfoBar__InfoBarLabel>
          Films by 
        </InfoBar__InfoBarLabel>
      </InfoBar__InfoBarWrapper>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <InfoBar__InfoBarLabel>
          Films by 
        </InfoBar__InfoBarLabel>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "Films by ",
            undefined,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Films by ",
          undefined,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <InfoBar__InfoBarWrapper>
          <InfoBar__InfoBarLabel>
            Films by 
          </InfoBar__InfoBarLabel>
        </InfoBar__InfoBarWrapper>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <InfoBar__InfoBarLabel>
            Films by 
          </InfoBar__InfoBarLabel>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "Films by ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Films by ",
            undefined,
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`InfoBar should be like snapshot when AppState is SearchPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InfoBar
    appState="search page"
    item={Object {}}
    items={
      Array [
        Object {},
      ]
    }
    setSortBy={null}
    total={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <InfoBar__InfoBarWrapper>
        <InfoBar__InfoBarLabel>
          0
           movies found
        </InfoBar__InfoBarLabel>
        <div>
          <InfoBar__InfoBarLabel>
            Sort by
          </InfoBar__InfoBarLabel>
          <InfoBar__InfoBarSortByLink
            className={false}
            onClick={[Function]}
          >
            release date
          </InfoBar__InfoBarSortByLink>
          <InfoBar__InfoBarSortByLink
            className={false}
            onClick={[Function]}
          >
            rating
          </InfoBar__InfoBarSortByLink>
        </div>
      </InfoBar__InfoBarWrapper>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <InfoBar__InfoBarLabel>
            0
             movies found
          </InfoBar__InfoBarLabel>,
          <div>
            <InfoBar__InfoBarLabel>
              Sort by
            </InfoBar__InfoBarLabel>
            <InfoBar__InfoBarSortByLink
              className={false}
              onClick={[Function]}
            >
              release date
            </InfoBar__InfoBarSortByLink>
            <InfoBar__InfoBarSortByLink
              className={false}
              onClick={[Function]}
            >
              rating
            </InfoBar__InfoBarSortByLink>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              0,
              " movies found",
            ],
          },
          "ref": null,
          "rendered": Array [
            0,
            " movies found",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <InfoBar__InfoBarLabel>
                Sort by
              </InfoBar__InfoBarLabel>,
              <InfoBar__InfoBarSortByLink
                className={false}
                onClick={[Function]}
              >
                release date
              </InfoBar__InfoBarSortByLink>,
              <InfoBar__InfoBarSortByLink
                className={false}
                onClick={[Function]}
              >
                rating
              </InfoBar__InfoBarSortByLink>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Sort by",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "release date",
                "className": false,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "release date",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "rating",
                "className": false,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "rating",
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <InfoBar__InfoBarWrapper>
          <InfoBar__InfoBarLabel>
            0
             movies found
          </InfoBar__InfoBarLabel>
          <div>
            <InfoBar__InfoBarLabel>
              Sort by
            </InfoBar__InfoBarLabel>
            <InfoBar__InfoBarSortByLink
              className={false}
              onClick={[Function]}
            >
              release date
            </InfoBar__InfoBarSortByLink>
            <InfoBar__InfoBarSortByLink
              className={false}
              onClick={[Function]}
            >
              rating
            </InfoBar__InfoBarSortByLink>
          </div>
        </InfoBar__InfoBarWrapper>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <InfoBar__InfoBarLabel>
              0
               movies found
            </InfoBar__InfoBarLabel>,
            <div>
              <InfoBar__InfoBarLabel>
                Sort by
              </InfoBar__InfoBarLabel>
              <InfoBar__InfoBarSortByLink
                className={false}
                onClick={[Function]}
              >
                release date
              </InfoBar__InfoBarSortByLink>
              <InfoBar__InfoBarSortByLink
                className={false}
                onClick={[Function]}
              >
                rating
              </InfoBar__InfoBarSortByLink>
            </div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                0,
                " movies found",
              ],
            },
            "ref": null,
            "rendered": Array [
              0,
              " movies found",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <InfoBar__InfoBarLabel>
                  Sort by
                </InfoBar__InfoBarLabel>,
                <InfoBar__InfoBarSortByLink
                  className={false}
                  onClick={[Function]}
                >
                  release date
                </InfoBar__InfoBarSortByLink>,
                <InfoBar__InfoBarSortByLink
                  className={false}
                  onClick={[Function]}
                >
                  rating
                </InfoBar__InfoBarSortByLink>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Sort by",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "release date",
                  "className": false,
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "release date",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "rating",
                  "className": false,
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "rating",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
